# Youtube-Channel-Knowledge-base

./: .gitignore  README.md  pyproject.toml
data/: config.toml.example
docs/superpowers/plans/: 2026-06-20-youtube-channel-knowledgebase.md  2026-06-23-reindex-command.md  2026-06-23-web-chat-redesign.md  2026-06-24-conversation-persistence.md
docs/superpowers/specs/: 2026-06-20-youtube-channel-knowledgebase-design.md  2026-06-23-reindex-command-design.md  2026-06-23-web-chat-redesign-design.md  2026-06-24-conversation-persistence-design.md
tests/: conftest.py  test_adstrip.py  test_agent.py  test_agent_stream.py  test_channel.py  test_chunking.py  test_cli.py  test_config.py  test_conversations.py  test_db.py  test_embeddings.py  test_llm.py  test_llm_stream.py  test_paths.py  test_pipeline.py  test_retrieval.py  test_sponsorblock.py  test_store.py  test_sync.py  test_transcripts.py  test_web.py  test_whisper_fallback.py
ytkb/: adstrip.py  agent.py  channel.py  chunking.py  cli.py  config.py  conversations.py  db.py  embeddings.py  llm.py  models.py  paths.py  pipeline.py  retrieval.py  sponsorblock.py  store.py  sync.py  transcripts.py  whisper_fallback.py
ytkb/web/: app.py
ytkb/web/static/: app.js  index.html  styles.css
